--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,10 @@
         continue.</strong>
   </noscript>
   <div id="app"></div>
-  <!-- built files will be auto injected -->
+  <a title="GDPR-compliant Web Analytics" href="https://clicky.com/101424327"><img alt="Clicky" src="//static.getclicky.com/media/links/badge.gif" border="0" /></a>
+  <script async data-id="101424327" src="//static.getclicky.com/js"></script>
+  
+  
 </body>
 
 </html>
